--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,8 +14,10 @@ dependencies:
   cupertino_icons: ^1.0.8
   get: ^4.6.6
   get_storage: ^2.1.1
-  geolocator: ^13.0.1
+  geolocator: ^10.1.1
+  geocode: ^1.0.3
   flutter_osm_plugin: ^1.3.0
+  open_street_map_search_and_pick: ^0.1.1
   jiffy: ^6.3.1
   image_picker: ^1.1.2
   path: ^1.9.0
