--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   timer_count_down: ^2.2.2
   http: ^1.2.2
   dropdown_search: ^6.0.1
+  multi_dropdown: ^3.0.1
   flutter_spinkit: ^5.2.1
   flutter_svg: ^2.0.16
   carousel_slider: ^5.0.0
