--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   carousel_slider: ^5.0.0
   smooth_page_indicator: ^1.2.0+3
   lottie: ^3.1.0
+  url_launcher: ^6.3.1
 
 
 dev_dependencies:
