--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,7 +3,7 @@ description: "shipment app"
 
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
-version: 1.0.0+1
+version: 0.0.0+1
 
 environment:
   sdk: ^3.5.1
@@ -15,7 +15,7 @@ dependencies:
   get: ^4.6.6
   get_storage: ^2.1.1
   geolocator: ^10.1.1
-  flutter_osm_plugin: ^1.3.0
+  flutter_osm_plugin: ^1.2.0
   jiffy: ^6.3.1
   image_picker: ^1.1.2
   path: ^1.9.0
@@ -31,7 +31,8 @@ dependencies:
   carousel_slider: ^5.0.0
   smooth_page_indicator: ^1.2.0+3
   lottie: ^3.1.0
-  url_launcher: ^6.3.1
+  url_launcher: ^6.3.0
+  package_info_plus: ^4.2.0
 
 
 dev_dependencies:
