--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   lottie: ^3.1.0
   url_launcher: ^6.3.0
   package_info_plus: ^4.2.0
+  easy_stepper: ^0.8.5+1
 
 
 dev_dependencies:
