--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   url_launcher: ^6.3.0
   package_info_plus: ^4.2.0
   easy_stepper: ^0.8.5+1
+  flutter_local_notifications: ^18.0.1
 
 
 dev_dependencies:
