--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   package_info_plus: ^4.2.0
   easy_stepper: ^0.8.5+1
   flutter_local_notifications: ^18.0.1
+  fl_chart: ^0.66.0
 
 
 dev_dependencies:
