--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,9 @@ dependencies:
   easy_stepper: ^0.8.5+1
   flutter_local_notifications: ^18.0.1
   fl_chart: ^0.66.0
+  onesignal_flutter: ^5.2.0
+  firebase_core: ^3.12.1
+  firebase_messaging: ^15.2.4
 
 
 dev_dependencies:
