--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   fl_chart: ^0.66.0
   firebase_core: ^3.12.1
   firebase_messaging: ^15.2.4
+  popover: ^0.2.8+2
 
 
 dev_dependencies:
