--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   firebase_core: ^3.12.1
   firebase_messaging: ^15.2.4
   popover: ^0.2.8+2
+  pie_chart: ^5.4.0
 
 
 dev_dependencies:
