--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
 #  image: ^4.3.0
   flutter_image_compress: ^2.4.0
   excel: ^4.0.6
+  web_socket_channel: ^3.0.3
 
 
 dev_dependencies:
