--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,10 +41,10 @@ dependencies:
   popover: ^0.2.8+2
   pie_chart: ^5.4.0
   timeago: ^3.7.0
-#  image: ^4.3.0
   flutter_image_compress: ^2.4.0
   excel: ^4.0.6
   web_socket_channel: ^3.0.3
+  share_plus: ^7.0.2
 
 
 dev_dependencies:
