--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   excel: ^4.0.6
   web_socket_channel: ^3.0.3
   share_plus: ^7.0.2
+  flutter_phone_direct_caller: ^2.1.0
 
 
 dev_dependencies:
