--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   web_socket_channel: ^3.0.3
   share_plus: ^7.0.2
   flutter_phone_direct_caller: ^2.1.0
+#  background_fetch: ^1.3.7
 
 
 dev_dependencies:
