--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,8 @@ dependencies:
   share_plus: ^7.0.2
   flutter_phone_direct_caller: ^2.1.0
 #  background_fetch: ^1.3.7
+  badges: ^3.1.2
+  font_awesome_flutter: ^10.8.0
 
 
 dev_dependencies:
