--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
 #  background_fetch: ^1.3.7
   badges: ^3.1.2
   font_awesome_flutter: ^10.8.0
+  flutter_blurhash: ^0.9.1
 
 
 dev_dependencies:
