--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,7 +49,7 @@ dependencies:
 #  background_fetch: ^1.3.7
   badges: ^3.1.2
   font_awesome_flutter: ^10.8.0
-  flutter_blurhash: ^0.9.1
+  flutter_dotenv: ^5.2.1
 
 
 dev_dependencies:
@@ -62,6 +62,7 @@ flutter:
   uses-material-design: true
 
   assets:
+    - .env
     - assets/images/
     - assets/animations/
   fonts:
