--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   badges: ^3.1.2
   font_awesome_flutter: ^10.8.0
   flutter_dotenv: ^5.2.1
+  app_settings: ^6.0.0
 
 
 dev_dependencies:
