--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   font_awesome_flutter: ^10.8.0
   flutter_dotenv: ^5.2.1
   app_settings: ^6.0.0
+  modal_bottom_sheet: ^3.0.0
 
 
 dev_dependencies:
