--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,7 +53,7 @@ dependencies:
   app_settings: ^6.0.0
   modal_bottom_sheet: ^3.0.0
   animated_bottom_navigation_bar: ^1.4.0
-  video_player: ^2.10.0
+#  video_player: ^2.9.0
 
 
 dev_dependencies:
