finished rating (not working from backend yet)

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,7 @@ dependencies:
   modal_bottom_sheet: ^3.0.0
   animated_bottom_navigation_bar: ^1.4.0
 #  video_player: ^2.9.0
+  flutter_rating_bar: ^4.0.1
 
 
 dev_dependencies:
