added lottie files, implemented a webview page, added missing locale, and fixed UI
Added two new Lottie animation files: `simple truck2.json` and `stats4.json`.
Implemented a new `WebViewPage` for displaying web content within the app.
Added a missing locale for "no data".
In `MyLoadingAnimation`, allowed customizing the "no data" title.
In `new_driver_tab.dart`, changed the "no data" message for the explore orders list and modified scroll behavior to control map container height.
Addressed a potential issue in `refresh_socket_controller.dart` where the list might appear empty for a few seconds when refreshing in the new driver tab.
Updated `kEnableLocationDialog` in `constants.dart` to take an `onConfirm` callback.
In `driver_home_controller.dart`, improved the map container's scroll behavior for expanding/collapsing and updated the location dialog handling to use the new `onConfirm` callback.
Added `webview_flutter` dependency.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,7 @@ dependencies:
   flutter_map: ^8.1.1
   latlong2: ^0.9.1
   flutter_timer_countdown: ^1.0.7
+  webview_flutter: ^4.13.0
 
 
 dev_dependencies:
