--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -38,6 +38,8 @@
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher"
         android:networkSecurityConfig="@xml/network_security_config"
+        android:allowBackup="false"
+        android:hasFragileUserData="true"
         android:usesCleartextTraffic="false">
 
         <meta-data android:name="shippingsys.adadevs.com.default_notification_icon"
