--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -6,6 +6,12 @@ plugins {
     id "dev.flutter.flutter-gradle-plugin"
 }
 
+//def keystoreProperties = new Properties()
+//def keystorePropertiesFile = rootProject.file("key.properties")
+//if (keystorePropertiesFile.exists()) {
+//    keystoreProperties.load(new FileInputStream(keystorePropertiesFile))
+//}
+
 android {
     namespace = "shippingsys.adadevs.com"
     compileSdk = flutter.compileSdkVersion
@@ -32,11 +38,20 @@ android {
         versionName = flutter.versionName
     }
 
+//    signingConfigs {
+//        release {
+//            keyAlias = keystoreProperties["keyAlias"]
+//            keyPassword = keystoreProperties["keyPassword"]
+//            storeFile = keystoreProperties["storeFile"] ? file(keystoreProperties["storeFile"]) : null
+//            storePassword = keystoreProperties["storePassword"]
+//        }
+//    }
+
     buildTypes {
         release {
             // TODO: Add your own signing config for the release build.
             // Signing with the debug keys for now, so `flutter run --release` works.
-            signingConfig = signingConfigs.debug
+            signingConfig = signingConfigs.debug //todo make release
         }
     }
 }
