Added price formatting and improved UI
This commit introduces number formatting for prices in the order model, ensuring better readability. It also includes several UI enhancements:

- Adjusted alert dialog title style in `order_view.dart`.
- Set the cancel/reject buttons in `order_view.dart` to red.
- Corrected the order confirmation flow in `order_view.dart` by moving `Get.back()` after the confirmation call.
- Added new translations for error messages in `locale.dart` and updated some existing Arabic translations.
- Added the `intl` package for internationalization and formatting.
- Commented out the leading and actions widgets in the `AppBar` of `company_manage_tab.dart`.
- Changed the background color of snackbar messages in `make_order_controller.dart` to red for better visibility of errors.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,7 @@ dependencies:
   latlong2: ^0.9.1
   flutter_timer_countdown: ^1.0.7
   webview_flutter: ^4.13.0
+  intl: ^0.20.2
 
 
 dev_dependencies:
