--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,7 +3,7 @@ description: "shipment app"
 
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
-version: 0.9.4+1
+version: 0.9.5+1
 
 environment:
   sdk: ^3.5.1
@@ -62,6 +62,7 @@ dependencies:
   intl: ^0.20.2
   modal_progress_hud_nsn: ^0.5.1
   showcaseview: ^4.0.1
+  pinput: ^5.0.2
 
 
 dev_dependencies:
