--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,6 +63,7 @@ dependencies:
   modal_progress_hud_nsn: ^0.5.1
   showcaseview: ^4.0.1
   pinput: ^5.0.2
+  qr_flutter: ^4.1.0
 
 
 dev_dependencies:
