--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -6,13 +6,15 @@ plugins {
     id "dev.flutter.flutter-gradle-plugin"
 }
 
-//def keystoreProperties = new Properties()
-//def keystorePropertiesFile = rootProject.file("key.properties")
-//if (keystorePropertiesFile.exists()) {
-//    keystoreProperties.load(new FileInputStream(keystorePropertiesFile))
-//}
-
 android {
+    def keystoreProperties = new Properties()
+    def keystorePropertiesFile = rootProject.file("key.properties")
+    if (keystorePropertiesFile.exists()) {
+        keystoreProperties.load(new FileInputStream(keystorePropertiesFile))
+    } else {
+        println "⚠️ key.properties not found. Using debug signing."
+    }
+
     namespace = "shippingsys.adadevs.com"
     compileSdk = flutter.compileSdkVersion
     ndkVersion = "25.1.8937393"
@@ -28,7 +30,6 @@ android {
     }
 
     defaultConfig {
-        // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
         applicationId = "shippingsys.adadevs.com"
         // You can update the following values to match your application needs.
         // For more information, see: https://flutter.dev/to/review-gradle-config.
@@ -38,20 +39,25 @@ android {
         versionName = flutter.versionName
     }
 
-//    signingConfigs {
-//        release {
-//            keyAlias = keystoreProperties["keyAlias"]
-//            keyPassword = keystoreProperties["keyPassword"]
-//            storeFile = keystoreProperties["storeFile"] ? file(keystoreProperties["storeFile"]) : null
-//            storePassword = keystoreProperties["storePassword"]
-//        }
-//    }
+    signingConfigs {
+        release {
+            keyAlias = keystoreProperties["keyAlias"]
+            keyPassword = keystoreProperties["keyPassword"]
+            storeFile = keystoreProperties["storeFile"] ? file(keystoreProperties["storeFile"]) : null
+            storePassword = keystoreProperties["storePassword"]
+
+            enableV1Signing true
+            enableV2Signing true
+            enableV3Signing true
+            enableV4Signing false
+        }
+    }
 
     buildTypes {
         release {
-            // TODO: Add your own signing config for the release build.
-            // Signing with the debug keys for now, so `flutter run --release` works.
-            signingConfig = signingConfigs.debug //todo make release
+            signingConfig signingConfigs.release
+            minifyEnabled true
+            shrinkResources true
         }
     }
 }
@@ -65,8 +71,4 @@ dependencies {
     implementation platform('com.google.firebase:firebase-bom:33.11.0')
 
     coreLibraryDesugaring "com.android.tools:desugar_jdk_libs:2.0.4"
-
-    // TODO: Add the dependencies for Firebase products you want to use
-    // When using the BoM, don't specify versions in Firebase dependencies
-    // https://firebase.google.com/docs/android/setup#available-libraries
 }
